# cafe2

./: CMakeLists.txt
src/: funcs.cpp  funcs.h  main.cpp
test/: tests.cpp
